add vim-less plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule ".vim/bundle/ultisnips"]
 	path = .vim/bundle/ultisnips
 	url = https://github.com/SirVer/ultisnips.git
+[submodule ".vim/bundle/lesscss"]
+	path = .vim/bundle/lesscss
+	url = https://github.com/groenewege/vim-less.git
