--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule ".vim/bundle/indent-object"]
 	path = .vim/bundle/indent-object
 	url = https://github.com/michaeljsmith/vim-indent-object.git
+[submodule ".vim/bundle/argtextobj.vim"]
+	path = .vim/bundle/argtextobj.vim
+	url = git://github.com/vim-scripts/argtextobj.vim.git
