--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule ".vim/bundle/vinegar"]
 	path = .vim/bundle/vinegar
 	url = git://github.com/tpope/vim-vinegar.git
+[submodule ".vim/bundle/fugitive-blame-comments"]
+	path = .vim/bundle/fugitive-blame-comments
+	url = git://github.com/tommcdo/vim-fugitive-blame-ext.git
